--- a/211506K_AS_Assignment/Pages/Login.cshtml
+++ b/211506K_AS_Assignment/Pages/Login.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model _211506K_AS_Assignment.Pages.LoginModel
 
-
 <link rel="stylesheet" type="text/css" href="\wwwroot\css\login.css">
 
 
 <section class="vh-100">
+    @Html.AntiForgeryToken()
     <div class="container-fluid h-custom">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-md-9 col-lg-6 col-xl-5">
@@ -13,7 +13,9 @@
                      class="img-fluid" alt="Sample image">
             </div>
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                <form>
+                <form method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <input type="hidden" asp-for="LModel.Token"/>
                     <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
                         <p class="lead fw-normal mb-0 me-3">Sign in with</p>
                         <button type="button" class="btn btn-primary btn-floating mx-1">
@@ -89,3 +91,16 @@
             </a>
         </div>  
 </section>
+</script>
+<script src="https://www.google.com/recaptcha/api.js?render=@Model.GoogleCaptchaConfig.SiteKey"></script>
+<script>
+    setInterval(getToken(), 115000)
+    function getToken() {
+        grecaptcha.ready(function () {
+            grecaptcha.execute('@Model.GoogleCaptchaConfig.SiteKey', { action: 'submit' }).then(function (token) {
+                console.log(token)
+                document.getElementById("LModel_Token").value = token
+            });
+        });
+    }
+</script>
