--- a/211506K_AS_Assignment/Pages/Shared/_Layout.cshtml
+++ b/211506K_AS_Assignment/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
+@using _211506K_AS_Assignment.Model;
+@inject SignInManager<ApplicationUser> SignInManager
 
 <!DOCTYPE html>
 <html lang="en">
@@ -36,6 +37,9 @@
                             <ul class="navbar-nav d-flex justify-content-end">
                                 <li class="nav-item">
                                     <a class="btn btn-primary" asp-area="" asp-page="/Logout">Logout</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="btn btn-primary" asp-area="" asp-page="/Logs">Logs</a>
                                 </li>
                             </ul>
                         </div>
